--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ dependencies = [
     "pyomo>=6.7.0",
     "sympy>=1.12.0",
     "xarray>=2023.1.0",
+    "psutil>=5.9.0",
 ]
 
 [project.optional-dependencies]
