now the user can provide the path to its data folder and simply run the solver with that

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,7 @@ pyomo-optimizer = "pyomo_optimizer_user_interface.main:run"
 [tool.hatch.build.targets.sdist]
 include = [
     "/pyomo_optimizer_user_interface",
+    "/user_data_example",
     "/README.md",
     "/LICENSE",
 ]
