--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ dependencies = [
     "sympy>=1.12.0",
     "xarray>=2023.1.0",
     "psutil>=5.9.0",
+    "seaborn>=0.13.2",
 ]
 
 [project.optional-dependencies]
